[gd_scene load_steps=24 format=3 uid="uid://ceap6j26pwpr0"]

[ext_resource type="PackedScene" uid="uid://d086y7w1tmsb3" path="res://scenes/slot.tscn" id="1_76p0g"]
[ext_resource type="Script" path="res://scenes/test_scene.gd" id="1_h37nk"]
[ext_resource type="Texture2D" uid="uid://biaurj0h8v7gf" path="res://assets/Fondo principal.jpg" id="1_n8j2j"]
[ext_resource type="Texture2D" uid="uid://ih3jiukvdvfr" path="res://assets/cabeza.png" id="2_1ns0i"]
[ext_resource type="Texture2D" uid="uid://w2ep68kpkh5v" path="res://assets/hombros.png" id="3_tpmv8"]
[ext_resource type="PackedScene" uid="uid://bxybc2d8dbnio" path="res://scenes/pasivos.tscn" id="4_316ku"]
[ext_resource type="Texture2D" uid="uid://dnbkun22qfa8o" path="res://assets/pecho.png" id="4_615pd"]
[ext_resource type="Texture2D" uid="uid://bk7mkjbb5p3oe" path="res://assets/brazos.png" id="5_c3du6"]
[ext_resource type="Texture2D" uid="uid://bbxvtok2qwjod" path="res://assets/estomago.png" id="6_8g1wq"]
[ext_resource type="Texture2D" uid="uid://ddbkpshey51du" path="res://assets/manos.png" id="7_nmpic"]
[ext_resource type="Texture2D" uid="uid://lheqbnshl4k8" path="res://assets/piernas.png" id="8_i6b7w"]
[ext_resource type="Texture2D" uid="uid://b6bppp6na5j2u" path="res://assets/pinus.png" id="9_tld4d"]
[ext_resource type="Texture2D" uid="uid://btu883mhb0ryd" path="res://assets/rodillas.png" id="10_5v1d6"]
[ext_resource type="Texture2D" uid="uid://bebuldx3n2xoo" path="res://assets/pies.png" id="11_aemk1"]
[ext_resource type="Texture2D" uid="uid://bjih3losa212n" path="res://assets/sombra.png" id="13_tmwfg"]
[ext_resource type="Script" path="res://scenes/Personaje.gd" id="14_fn8cm"]
[ext_resource type="Texture2D" uid="uid://dcs4lu3gqetpc" path="res://assets/ni√±o.png" id="17_qm2sg"]
[ext_resource type="Texture2D" uid="uid://dkhor6rcnaafr" path="res://assets/fondo.jpg" id="17_xnmlo"]
[ext_resource type="Texture2D" uid="uid://yw84lvwmewps" path="res://assets/flecha-correcta.png" id="18_bxt06"]
[ext_resource type="Texture2D" uid="uid://cf3lnnuta86v8" path="res://assets/you_win-removebg-preview.png" id="20_7geu2"]
[ext_resource type="Texture2D" uid="uid://dsbdas86ojohq" path="res://assets/tituloII.png" id="21_0cgdi"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_f3vrs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h5jjv"]
size = Vector2(178.421, 702.632)

[node name="TestScene" type="Node2D"]
scale = Vector2(0.95, 0.95)
script = ExtResource("1_h37nk")

[node name="FondoPrincipal" type="Sprite2D" parent="."]
position = Vector2(587.895, 341.316)
scale = Vector2(1.04298, 0.982707)
texture = ExtResource("1_n8j2j")

[node name="Sombra" type="Sprite2D" parent="."]
position = Vector2(1031.57, 340.792)
scale = Vector2(0.236, 0.236)
texture = ExtResource("13_tmwfg")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 71.5789
offset_top = -2.10526
offset_right = 111.579
offset_bottom = 37.8947

[node name="Parts" type="GridContainer" parent="UI"]
layout_mode = 0
offset_left = 189.474
offset_top = 402.105
offset_right = 755.474
offset_bottom = 626.105
columns = 5

[node name="slot" parent="UI/Parts" instance=ExtResource("1_76p0g")]
layout_mode = 2

[node name="TextureRect" parent="UI/Parts/slot" index="0"]
custom_minimum_size = Vector2(110, 110)
texture = ExtResource("2_1ns0i")
slot_type = 1
POINT = 1

[node name="BUGG" parent="UI/Parts/slot" index="2"]
text = "CABEZA"

[node name="slot2" parent="UI/Parts" instance=ExtResource("1_76p0g")]
layout_mode = 2

[node name="TextureRect" parent="UI/Parts/slot2" index="0"]
custom_minimum_size = Vector2(110, 110)
texture = ExtResource("3_tpmv8")
slot_type = 2
POINT = 1

[node name="BUGG" parent="UI/Parts/slot2" index="2"]
text = "HOMBROS"

[node name="slot3" parent="UI/Parts" instance=ExtResource("1_76p0g")]
layout_mode = 2

[node name="TextureRect" parent="UI/Parts/slot3" index="0"]
custom_minimum_size = Vector2(110, 110)
texture = ExtResource("4_615pd")
slot_type = 3
POINT = 1

[node name="BUGG" parent="UI/Parts/slot3" index="2"]
text = "PECHO"

[node name="slot4" parent="UI/Parts" instance=ExtResource("1_76p0g")]
layout_mode = 2

[node name="TextureRect" parent="UI/Parts/slot4" index="0"]
custom_minimum_size = Vector2(110, 110)
texture = ExtResource("5_c3du6")
slot_type = 4
POINT = 1

[node name="BUGG" parent="UI/Parts/slot4" index="2"]
text = "BRAZOS"

[node name="slot5" parent="UI/Parts" instance=ExtResource("1_76p0g")]
layout_mode = 2

[node name="TextureRect" parent="UI/Parts/slot5" index="0"]
custom_minimum_size = Vector2(110, 110)
texture = ExtResource("6_8g1wq")
slot_type = 5
POINT = 1

[node name="BUGG" parent="UI/Parts/slot5" index="2"]
text = "ESTOMAGO"

[node name="slot6" parent="UI/Parts" instance=ExtResource("1_76p0g")]
layout_mode = 2

[node name="TextureRect" parent="UI/Parts/slot6" index="0"]
custom_minimum_size = Vector2(110, 110)
texture = ExtResource("7_nmpic")
slot_type = 6
POINT = 1

[node name="BUGG" parent="UI/Parts/slot6" index="2"]
text = "MANOS"

[node name="slot7" parent="UI/Parts" instance=ExtResource("1_76p0g")]
layout_mode = 2

[node name="TextureRect" parent="UI/Parts/slot7" index="0"]
custom_minimum_size = Vector2(110, 110)
texture = ExtResource("8_i6b7w")
slot_type = 7
POINT = 1

[node name="BUGG" parent="UI/Parts/slot7" index="2"]
text = "PIERNAS"

[node name="slot8" parent="UI/Parts" instance=ExtResource("1_76p0g")]
layout_mode = 2

[node name="TextureRect" parent="UI/Parts/slot8" index="0"]
custom_minimum_size = Vector2(110, 110)
texture = ExtResource("9_tld4d")
slot_type = 8
POINT = 1

[node name="BUGG" parent="UI/Parts/slot8" index="2"]
text = "PENE"

[node name="slot9" parent="UI/Parts" instance=ExtResource("1_76p0g")]
layout_mode = 2

[node name="TextureRect" parent="UI/Parts/slot9" index="0"]
custom_minimum_size = Vector2(110, 110)
texture = ExtResource("10_5v1d6")
slot_type = 9
POINT = 1

[node name="BUGG" parent="UI/Parts/slot9" index="2"]
text = "RODILLAS"

[node name="slot10" parent="UI/Parts" instance=ExtResource("1_76p0g")]
layout_mode = 2

[node name="TextureRect" parent="UI/Parts/slot10" index="0"]
custom_minimum_size = Vector2(110, 110)
texture = ExtResource("11_aemk1")
slot_type = 10
POINT = 1

[node name="BUGG" parent="UI/Parts/slot10" index="2"]
text = "PIES"

[node name="Personaje" type="Control" parent="UI"]
anchors_preset = 0
offset_left = 550.526
offset_top = -25.2632
offset_right = 590.526
offset_bottom = 14.7368
scale = Vector2(1.18, 1.18)
script = ExtResource("14_fn8cm")

[node name="Pasivos" parent="UI/Personaje" instance=ExtResource("4_316ku")]
layout_mode = 0
offset_left = 254.0
offset_top = 37.0
offset_right = 294.0
offset_bottom = 77.0
scale = Vector2(3.90149, 3.98198)

[node name="Pasivos4" parent="UI/Personaje" instance=ExtResource("4_316ku")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = 239.0
offset_top = 206.0
offset_right = 420.0
offset_bottom = 360.0
slot_type = 4

[node name="Pasivos9" parent="UI/Personaje" instance=ExtResource("4_316ku")]
layout_mode = 0
offset_left = 259.0
offset_top = 512.0
offset_right = 421.0
offset_bottom = 585.0
slot_type = 10

[node name="Pasivos7" parent="UI/Personaje" instance=ExtResource("4_316ku")]
layout_mode = 0
offset_left = 283.0
offset_top = 319.0
offset_right = 426.0
offset_bottom = 537.0
slot_type = 7

[node name="Pasivos5" parent="UI/Personaje" instance=ExtResource("4_316ku")]
layout_mode = 0
offset_left = 286.0
offset_top = 329.0
offset_right = 439.0
offset_bottom = 395.0
slot_type = 6

[node name="Pasivos8" parent="UI/Personaje" instance=ExtResource("4_316ku")]
layout_mode = 0
offset_left = 288.0
offset_top = 405.0
offset_right = 414.0
offset_bottom = 455.0
slot_type = 9

[node name="Pasivos2" parent="UI/Personaje" instance=ExtResource("4_316ku")]
layout_mode = 0
offset_left = 274.0
offset_top = 180.0
offset_right = 315.0
offset_bottom = 228.0
scale = Vector2(3.44507, 1.28312)
slot_type = 2

[node name="Pasivos10" parent="UI/Personaje" instance=ExtResource("4_316ku")]
layout_mode = 0
offset_left = 291.0
offset_top = 243.0
offset_right = 394.0
offset_bottom = 356.0
slot_type = 5

[node name="Pasivos3" parent="UI/Personaje" instance=ExtResource("4_316ku")]
layout_mode = 0
offset_left = 292.0
offset_top = 224.0
offset_right = 332.0
offset_bottom = 264.0
scale = Vector2(2.51999, 1.29655)
slot_type = 3

[node name="Pasivos6" parent="UI/Personaje" instance=ExtResource("4_316ku")]
layout_mode = 0
offset_left = 331.0
offset_top = 348.0
offset_right = 348.0
offset_bottom = 366.0
scale = Vector2(1.12, 1.22321)
slot_type = 8

[node name="TextureRect" parent="UI/Personaje/Pasivos6" index="0"]
custom_minimum_size = Vector2(0, 0)

[node name="BUGG" parent="UI/Personaje/Pasivos6" index="2"]
theme_override_font_sizes/font_size = 8

[node name="PON" type="Label" parent="UI"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 612.631
offset_top = 333.684
offset_right = 722.631
offset_bottom = 391.684
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PUNTOS" type="Label" parent="UI"]
layout_mode = 0
offset_left = 582.105
offset_top = 274.737
offset_right = 763.105
offset_bottom = 340.737
theme_override_colors/font_color = Color(0, 0.756863, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
text = "PUNTOS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="resumen" type="Label" parent="."]
offset_left = 254.737
offset_top = 289.474
offset_right = 629.737
offset_bottom = 365.474
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Arrastra cada parte del cuerpo 
y sueltala donde corresponda."
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0, 0.662745, 0.701961, 0.235294)
offset_right = 169.0
offset_bottom = 686.0
texture = SubResource("PlaceholderTexture2D_f3vrs")

[node name="Fondo" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.784314)
position = Vector2(602.105, 382.105)
scale = Vector2(0.205965, 0.2)
texture = ExtResource("17_xnmlo")

[node name="YouWin-removebg-preview" type="Sprite2D" parent="."]
visible = false
position = Vector2(549.474, 443.158)
scale = Vector2(1.1, 1.1)
texture = ExtResource("20_7geu2")

[node name="Ni√±o" type="Sprite2D" parent="."]
visible = false
position = Vector2(1034.74, 338.947)
scale = Vector2(0.236, 0.236)
texture = ExtResource("17_qm2sg")

[node name="Flecha-correcta" type="Sprite2D" parent="."]
visible = false
position = Vector2(78.9474, 332.632)
rotation = 3.13961
scale = Vector2(0.656779, 1.40507)
texture = ExtResource("18_bxt06")

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(79.2105, 341.316)
shape = SubResource("RectangleShape2D_h5jjv")

[node name="titulo2" type="Sprite2D" parent="."]
position = Vector2(548.421, 163.158)
scale = Vector2(0.896377, 0.921642)
texture = ExtResource("21_0cgdi")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]

[editable path="UI/Parts/slot"]
[editable path="UI/Parts/slot2"]
[editable path="UI/Parts/slot3"]
[editable path="UI/Parts/slot4"]
[editable path="UI/Parts/slot5"]
[editable path="UI/Parts/slot6"]
[editable path="UI/Parts/slot7"]
[editable path="UI/Parts/slot8"]
[editable path="UI/Parts/slot9"]
[editable path="UI/Parts/slot10"]
[editable path="UI/Personaje/Pasivos6"]
